1.1.0 () -

- TD-120  Missing cmakedefine for HAVE_GET_CURRENT_DIR_NAME
          (Thanks to Jörg Krause, Ben Boeckel).
- TW-1845 Cygwin build fails, missing get_current_dir_name
          (thanks to hosaka).
- TI-27   Continue tracking by ID
          (thanks to Dennis Schubert)
- TI-29   timew config can't add new value
          (thanks to Yury Vidineev)
- TI-32   taskwarrior hook script doesn't stop recording waiting task
          (thanks to Yury Videneev).
- TI-39   Bogus command line option causes segfault
          (thanks to Jan Stolarek, Thomas Lauf).
- TI-40   totals.py extension script fails with an error
          (thanks to Jan Stolarek)
- TI-42   refresh holiday script throws an error on nb-NO locale
          (thanks to Jelle van der Waa).
- TI-43   :lastweek on sunday
          (thanks to Michel Crucifix).
- TI-46   Display error in visual reports (day,week,month)
          (thanks to Michael Meier)
- TI-47   first call successfully creates new database but returns exit status 1
          (thanks to Georg Sauthoff).
- TI-48   Timewarrior hook is not Python3 compatible
          (thanks to Josh Proehl, Armado Martinez)
- TI-49   new theme files aren't installed
          (thanks to Richard Brown).
- TI-51   in the taskwarrior hook, deleting a task doesn't stop the watch
          (thanks to Mattia Rizzolo).
- TI-52   The 'refresh' scripts overwrites previous years data
          (thanks to m8r).
- TI-58   Delete command is not always deleting
          (thanks to Lynoure, asmyers).
- TI-61   Typo in exclusion.t.cpp
          (thanks to Thomas Lauf).
- TI-62   TimeWarrior should not ignore invalid command
- TI-64   Command 'stop' with date before current interval's start date causes
          segfault
          (thanks to Thomas Lauf).
- TI-65   The 'tags' command should support a filter
- TI-67   Summary with parameters shows wrong ids
          (thanks to Bodo Graumann)
- TI-68   Cannot shorten interval which has been moved into an exclusion.