@@ -25,6 +25,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   A M
   asmyers
   Lukas Barth
+  Paul J. Fenwick
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
